Make sure comments about info doesn't overflow

--- a/app/components/CommentList.styl
+++ b/app/components/CommentList.styl
@@ -8,6 +8,13 @@
 	padding: 5px
 	cursor: n-resize
 
+.aboutItem
+	display: block
+	width: 455px
+	overflow: hidden
+	text-overflow: ellipsis
+	white-space: nowrap
+
 .aboutChildren
 	display: none
 	margin-left: 5px
